# SolarIQ

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  TODO.md  docker-compose.yaml  pyproject.toml  rxconfig.py  solariq.ini.example
.claude/: settings.json
assets/: compli.css
docs/: strategy.md
solariq/: app_settings.py  auth.py  cache.py  calibration.py  config.py  logging_config.py  solariq.py  worker.py
solariq/data/: forecast_accuracy.py  forecast_solar.py  influx.py  load_profile.py  octopus.py  solcast.py  weather.py
solariq/optimizer/: model.py  simulator.py  solver.py  strategy.py  types.py
solariq/scripts/: compare_forecasts.py  reacquire_forecast.py  seed_solcast.py
solariq/ui/: auth.py  auth_state.py  components.py  evaluation.py  history.py  inverter.py  settings.py  state.py  state_common.py  theme.py  today.py  tomorrow.py
tests/: conftest.py  test_app_settings.py  test_auth.py  test_cache.py  test_calibration.py  test_config.py  test_worker.py  test_worker_forecast_solar.py
tests/data/: test_forecast_accuracy.py  test_forecast_solar.py  test_influx.py  test_influx_battery_peak_saving.py  test_influx_history.py  test_influx_solcast.py  test_load_profile.py  test_octopus.py  test_solcast.py
tests/fixtures/: test.ini
tests/optimizer/: test_simulator.py  test_solver.py  test_strategy.py
